# celery_blog

./: pyproject.toml
celery_blog/: manage.py
celery_blog/celery_blog/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
celery_blog/core/: tasks.py  views.py
